# pushswap

./: Makefile  README.md
checker/: CMakeLists.txt  Makefile  a.out  check_functions.c  checker  do_action.c  draw.c  extra_functions.c  instr_functions.c  instruction_functions.c  jj  jjj  list_functions.c  main.c  parse.c  push_swap.h
checker/a.out.dSYM/Contents/Resources/DWARF/: a.out
checker/checker.dSYM/Contents/Resources/DWARF/: checker
checker/includes/: push_swap.h
checker/src/: check_functions.c  do_action.c  extra_functions.c  instr_functions.c  instruction_functions.c  list_functions.c  main.c  parse.c
fdf_tutorial/: CMakeLists.txt  a.out  draw.c  fdf.h  j  main.c  main2.c  read_file.c
includes/: push_swap.h
libft/: Makefile
libft/ft_printf/: binary.c  check_format.c  common_functions.c  count_length.c  format_percent.c  format_print_c.c  format_print_di.c  format_print_di_extra.c  format_print_p.c  format_print_p_extra.c  format_print_str.c  format_print_u.c  format_print_u_four.c  format_print_u_one.c  format_print_u_three.c  format_print_u_two.c  ft_float.c  ft_float_one.c  ft_float_two.c  ft_parse.c  ft_printf.c  ft_printf_add.c  ft_putchar_fd_my.c  ft_putnbr_my.c  hex_oct.c  print_oxp.c  star_functions.c  time.c
libft/ft_sort/: add_block.c  delete_first.c  delete_last.c  get_next.c  (+3 more)
push_swap3/: CMakeLists.txt  a.out  check_functions.c  checker  do_action.c  help_functions.c  list_functions.c  main.c  parse.c  push_a.c  push_in_a.c  push_swap.c  push_swap.h  push_swap_min.c
pushswap/: CMakeLists.txt  check_functions.c  clear_pushswap.c  common_actions.c  do_action.c  help_functions.c  list_functions.c  main.c  push_min_op.c  push_swap.c  push_swap.h  push_swap_min.c
pushswap copy/: CMakeLists.txt  check_functions.c  do_action.c  help_functions.c  main.c  push_min_op.c  push_swap.c  push_swap.h  push_swap_min.c
src/: check_functions.c  do_action.c  draw.c  extra_functions.c  instruction_functions.c  list_functions.c  main.c  order.c  parse.c  visual_gen.c
src2/: do_act_push_swap.c  do_action_push_swap.c  help_functions.c  main_push_swap.c  make_sort.c  push_a.c  push_in_a.c  push_swap.c  push_swap_min.c
(+66 files in other folders)
